--- a/Adwin/login.html
+++ b/Adwin/login.html
@@ -32,7 +32,7 @@
 							<br/>
 							<span class="text-lg text-bold text-primary">Adwin Tracker</span>
 							<br/><br/>
-							<form class="form floating-label" action="tracker.html" accept-charset="utf-8" method="post">
+							<form class="form floating-label" action="" accept-charset="utf-8" method="post">
 								<div class="form-group">
 									<input type="text" class="form-control" id="username" name="username">
 									<label for="username">Username</label>
@@ -52,8 +52,10 @@
 										</div>
 									</div><!--end .col -->
 									<div class="col-xs-6 text-right">
+									  <a href="tracker.html">
 										<button class="btn btn-primary btn-raised" type="submit">
 											<i class="fa fa-sign-in"></i> &nbsp;&nbsp; Sign In</button>
+									 </a>
 									</div><!--end .col -->
 								</div><!--end .row -->
 							</form>
