Change button type from submit to button

--- a/Adwin/login.html
+++ b/Adwin/login.html
@@ -53,7 +53,7 @@
 									</div><!--end .col -->
 									<div class="col-xs-6 text-right">
 									  <a href="tracker.html">
-										<button class="btn btn-primary btn-raised" type="submit">
+										<button class="btn btn-primary btn-raised" type="button">
 											<i class="fa fa-sign-in"></i> &nbsp;&nbsp; Sign In</button>
 									 </a>
 									</div><!--end .col -->
