--- a/Adwin/login.html
+++ b/Adwin/login.html
@@ -32,7 +32,7 @@
 							<br/>
 							<span class="text-lg text-bold text-primary">Adwin Tracker</span>
 							<br/><br/>
-							<form class="form floating-label" action="" accept-charset="utf-8" method="post">
+							<form class="form floating-label" accept-charset="utf-8">
 								<div class="form-group">
 									<input type="text" class="form-control" id="username" name="username">
 									<label for="username">Username</label>
