--- a/Adwin/tracker.html
+++ b/Adwin/tracker.html
@@ -324,7 +324,7 @@
 	<script src="js/libs/bootstrap/bootstrap.min.js"></script>
 	<script src="js/libs/spin.js/spin.min.js"></script>
 	<script src="js/libs/autosize/jquery.autosize.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyCaFiiyJLSZNfT5D2sBiWzSK1MDo41e-JA&amp;sensor=false"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzpFKmd5cucnGUrYiUzaIouvmhgClXArw&callback=initMap"></script>
 	<script src="js/libs/gmaps/gmaps.js"></script>
 	<script src="js/libs/nanoscroller/jquery.nanoscroller.min.js"></script>
 	<script src="js/core/source/App.js"></script>
