--- a/Adwin/tracker.html
+++ b/Adwin/tracker.html
@@ -235,7 +235,7 @@
 			<!-- BEGIN OFFCANVAS CHAT -->
 			<div id="offcanvas-chat" class="offcanvas-pane style-default-light width-12">
 				<div class="offcanvas-head style-default-bright">
-					<header class="text-primary">Chat with Ann Laurens</header>
+					<header class="text-primary">Logs</header>
 					<div class="offcanvas-tools">
 						<a class="btn btn-icon-toggle btn-default-light pull-right" data-dismiss="offcanvas">
 							<i class="md md-close"></i>
@@ -244,68 +244,36 @@
 							<i class="md md-arrow-back"></i>
 						</a>
 					</div>
-					<form class="form">
-						<div class="form-group floating-label">
-							<textarea name="sidebarChatMessage" id="sidebarChatMessage" class="form-control autosize" rows="1"></textarea>
-							<label for="sidebarChatMessage">Leave a message</label>
-						</div>
-					</form>
 				</div>
 				<div class="offcanvas-body">
-					<ul class="list-chats">
-						<li>
-							<div class="chat">
-								<div class="chat-avatar"><img class="img-circle" src="../../assets/img/avatar1.jpg?1403934956" alt="" /></div>
-								<div class="chat-body">
-									Yes, it is indeed very beautiful.
-									<small>10:03 pm</small>
-								</div>
-							</div><!--end .chat -->
+					<ul class="timeline collapse-lg timeline-hairline">
+						<li class="timeline-inverted">
+							<div class="timeline-circ circ-xl style-primary"><span class="glyphicon glyphicon-map-marker"></span></div>
+							<div class="timeline-entry">
+								<div class="card style-default-bright">
+									<div class="card-body small-padding">
+										<span class="text-medium">Driver 1 <a class="text-primary" href="#">was</a> last seen at
+											 <span class="text-primary">Dzorwulu</span></span><br/>
+										<span class="opacity-50">
+											Saturday, October 18, 2016
+										</span>
+									</div><!--end .card-body -->
+								</div><!--end .card -->
+							</div><!--end .timeline-entry -->
 						</li>
-						<li class="chat-left">
-							<div class="chat">
-								<div class="chat-avatar"><img class="img-circle" src="../../assets/img/avatar9.jpg?1404026744" alt="" /></div>
-								<div class="chat-body">
-									Did you see the changes?
-									<small>10:02 pm</small>
-								</div>
-							</div><!--end .chat -->
-						</li>
-						<li>
-							<div class="chat">
-								<div class="chat-avatar"><img class="img-circle" src="../../assets/img/avatar1.jpg?1403934956" alt="" /></div>
-								<div class="chat-body">
-									I just arrived at work, it was quite busy.
-									<small>06:44pm</small>
-								</div>
-								<div class="chat-body">
-									I will take look in a minute.
-									<small>06:45pm</small>
-								</div>
-							</div><!--end .chat -->
-						</li>
-						<li class="chat-left">
-							<div class="chat">
-								<div class="chat-avatar"><img class="img-circle" src="../../assets/img/avatar9.jpg?1404026744" alt="" /></div>
-								<div class="chat-body">
-									The colors are much better now.
-								</div>
-								<div class="chat-body">
-									The colors are brighter than before.
-									I have already sent an example.
-									This will make it look sharper.
-									<small>Mon</small>
-								</div>
-							</div><!--end .chat -->
-						</li>
-						<li>
-							<div class="chat">
-								<div class="chat-avatar"><img class="img-circle" src="../../assets/img/avatar1.jpg?1403934956" alt="" /></div>
-								<div class="chat-body">
-									Are the colors of the logo already adapted?
-									<small>Last week</small>
-								</div>
-							</div><!--end .chat -->
+						<li class="timeline-inverted">
+							<div class="timeline-circ circ-xl style-primary"><span class="glyphicon glyphicon-map-marker"></span></div>
+							<div class="timeline-entry">
+								<div class="card style-default-bright">
+									<div class="card-body small-padding">
+										<span class="text-medium">Driver 1 <a class="text-primary" href="#">was</a> last seen at
+											 <span class="text-primary">Achimota</span></span><br/>
+										<span class="opacity-50">
+											Saturday, March 18, 2016
+										</span>
+									</div><!--end .card-body -->
+								</div><!--end .card -->
+							</div><!--end .timeline-entry -->
 						</li>
 					</ul>
 				</div><!--end .offcanvas-body -->
